tests/extensions/dowhile/syntaxErr/dwDonoTypo.wacc
# done typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  do
    skip
  while false 
  dono
end